# lerobot_policy_a2

./: MIGRATION_TASK.md  README.md  pyproject.toml
src/lerobot_policy_a2/: __init__.py  configuration_a2.py  feature_field.py  feature_field_simple.py  modeling_a2.py  processor_a2.py
src/lerobot_policy_a2/clip/: __init__.py  clip.py  interpolate.py  model.py  simple_tokenizer.py
src/lerobot_policy_a2/graspnet/: README.md  __init__.py  demo.py  test.py  train.py  wrapper.py
src/lerobot_policy_a2/graspnet/dataset/: generate_tolerance_label.py  graspnet_dataset.py
src/lerobot_policy_a2/graspnet/knn/: knn_fallback.py  knn_modules.py  setup.py
src/lerobot_policy_a2/graspnet/knn/knn_pytorch/: __init__.py
src/lerobot_policy_a2/graspnet/knn/src/: knn.h
src/lerobot_policy_a2/graspnet/knn/src/cuda/: vision.h
src/lerobot_policy_a2/graspnet/models/: backbone.py  graspnet.py  loss.py  modules.py
src/lerobot_policy_a2/graspnet/pointnet2/: pointnet2_modules.py  pointnet2_ops_fallback.py  pointnet2_utils.py  pytorch_utils.py  setup.py
src/lerobot_policy_a2/graspnet/pointnet2/pointnet2/: __init__.py
src/lerobot_policy_a2/graspnet/utils/: collision_detector.py  data_utils.py  label_generation.py  loss_utils.py
src/lerobot_policy_a2/networks/: __init__.py  action_selection.py  clip_action.py  grasp_generator.py  place_generator.py
src/lerobot_policy_a2/scripts/: __init__.py  record_dataset.py
