[project]
name = "lerobot_policy_a2"
version = "0.1.0"
description = "A2 Policy for LeRobot - ViLGP3D grasp and place policy using CLIP-based action selection"
readme = "README.md"
requires-python = ">= 3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Denis Grachev"}
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.0.0",
    "open3d>=0.17.0",
    "Pillow>=9.0.0",
    "huggingface_hub>=0.20.0",
    "ftfy",
    "regex",
    "tqdm",
    "packaging",
    "torchvision>=0.15.0",
]

[project.optional-dependencies]
graspnet = ["graspnetAPI>=1.2.11"]
sim = ["pybullet>=3.2.5"]
all = ["lerobot_policy_a2[graspnet,sim]"]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lerobot_policy_a2"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.uv]
# Override deprecated/pinned dependencies from graspnetAPI
override-dependencies = [
    "sklearn ; python_version < '0'",  # deprecated, scikit-learn provides it
    "numpy>=1.26.0,<3.0.0",
    "transforms3d>=0.4.0",
    "pillow>=10.0.0",
    "scipy>=1.12.0",
    "matplotlib>=3.8.0",
    "opencv-python>=4.9.0",
    "tqdm>=4.66.0",
    "autolab-core>=1.1.0",
    "trimesh>=4.0.0",
]
